Commited By Harshit 12 May

--- a/app/src/main/res/layout-v16/activity_airetime_international.xml
+++ b/app/src/main/res/layout-v16/activity_airetime_international.xml
@@ -147,7 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:gravity="center"
-                    android:text="International Airtime Product Types"
+                    android:text="Product Types"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
@@ -203,7 +203,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:gravity="center"
-                    android:text="International Airtime Operators"
+                    android:text="Airtime Operators"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
