solved issue by Keshav Savita 05 Sep 2023

--- a/app/src/main/res/layout/activity_confirm_foriengn.xml
+++ b/app/src/main/res/layout/activity_confirm_foriengn.xml
@@ -497,6 +497,7 @@
                             android:gravity="center_vertical"
                             android:textColor="@color/black"
                             android:textSize="@dimen/_11sdp"
+                            android:text="Please add Expense Category"
                             android:visibility="visible" />
 
 
