--- a/app/src/main/res/layout/activity_confirm_payment_broadband.xml
+++ b/app/src/main/res/layout/activity_confirm_payment_broadband.xml
@@ -476,6 +476,7 @@
                             android:visibility="visible"
                             android:fontFamily="@font/poppinsregular"
                             android:textSize="@dimen/_11sdp"
+                            android:text="Please add Expense Category"
                             android:textColor="@color/black"
                             android:gravity="center_vertical"/>
 
