--- a/app/src/main/res/layout/activity_confirm_payment_new.xml
+++ b/app/src/main/res/layout/activity_confirm_payment_new.xml
@@ -486,7 +486,7 @@
                             android:padding="@dimen/_10sdp"
                             android:gravity="center_vertical"
                             android:textSize="@dimen/_11sdp"
-                            android:text="dddd"
+                            android:text="Please add Expense Category"
                             android:visibility="visible" />
 
 
