--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     >
 
     <RelativeLayout
+        android:id="@+id/postsFrameLayout"
         android:background="@drawable/splash_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
