--- a/app/src/main/res/layout/activity_funds_transfer.xml
+++ b/app/src/main/res/layout/activity_funds_transfer.xml
@@ -150,6 +150,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_50sdp"
                     android:layout_marginTop="@dimen/_30sdp"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:alpha=".5"
                     android:background="@drawable/blue_rounded_border">
 
                     <TextView
